<resources>
    <string name="app_name">Smart-Health</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Correo Electronico</string>
    <string name="password_hint">Contraseña</string>
    <string name="button_login_label">Ingresar</string>
    <string name="login_label1">No tengo cuenta</string>
    <string name="login_signup_label">Crea una cuenta</string>
    <string name="email_error">Correo electronico no valido</string>
    <string name="email_error2">Ingresa un correo electronico valido</string>
    <string name="password_error">Error en la contraseña</string>
    <string name="password_error2">Debe contener minimo 8 caracteres</string>
    <string name="button_signup_label">Crear Cuenta</string>
    <string name="signup_label_1">Tengo cuenta</string>
    <string name="signup_login_label">Iniciar Sesión</string>
    <string name="name_hint">Nombre</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Femenino</string>
    <string name="another_label">Otro</string>
    <string name="button_forgout_label">Cambiar Contraseña</string>
    <string name="login_forgot_password">Olvidaste la contraseña?</string>
    <string name="home_label">Home</string>
    <string name="location_Label">Localización</string>
    <string name="profile_label">Mi perfil</string>
    <string name="specialist_label">Especializacón</string>
    <string name="text_toolbar">SMART-HEALTH</string>
    <string name="title_fragment_home">Tu medico inteligente</string>
    <string name="fragment_home_subtitle_text">Te brindamos la mejor compañia y asesoria con el personal especializado</string>
    <string name="fragment_home_list_services">Todos Nuestros Servicios</string>
    <string name="item_service_derma">Dermatologia</string>
    <string name="item_service_gene">General</string>
    <string name="tittle_general">General</string>
    <string name="specialist_subtittle">Profecionales capacitados para realizar el diagnostico y tratamiento</string>
    <string name="especialistas_tittle_list">Especialistas</string>
    <string name="filtrar_specialist">Filtrar</string>
    <string name="login_error">Credenciales invalidas </string>
    <string name="signup_error">Registro Invalido </string>
    <string name="specialist_fragment_title"> Nuestros Especialistas </string>
    <string name="specialist_fragment_subtitle"> Agenda una cita con una especialidad de tu preferencia </string>
    <string name="details">Detalles del Medico </string>

</resources>