<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ul.fragments.ForgoutFragment">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintVertical_chainStyle="spread"
        android:id="@+id/fragment_forgout_card"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_forgout_button"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgout_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/email_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_forgout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgout_card"
        app:layout_constraintBottom_toTopOf="@id/fragment_forgout_label_1"
        android:textSize="@dimen/medium_font"
        android:text="@string/button_forgout_label"
        app:backgroundTint="@color/primary"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_forgout_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_forgout_label_2"
        app:layout_constraintTop_toBottomOf="@id/fragment_forgout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/medium_font"
        android:textColor="@color/primary"
        android:text="@string/login_label1"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginHorizontal="20dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_forgout_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/fragment_forgout_label_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_forgout_label_1"
        app:layout_constraintBottom_toBottomOf="@id/fragment_forgout_label_1"
        android:layout_marginVertical="20dp"
        android:textSize="@dimen/medium_font"
        android:text="@string/login_signup_label"
        android:textColor="@color/primaryLight"/>


</androidx.constraintlayout.widget.ConstraintLayout>