<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ul.fragments.HomeFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/home_image_consultorio"
        android:layout_width="0dp"
        android:layout_height="@dimen/banner_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fondo_consultorio"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/fragment_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/home_image_consultorio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_fragment_home"
        android:layout_marginVertical="@dimen/default_margin"
        android:textAppearance="@style/Title_Fragment_Home"
        />

    <TextView
        android:id="@+id/fragment_home_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fragment_home_subtitle_text"
        android:layout_marginVertical="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:gravity="center"
        android:textAppearance="@style/Subtitle_Fragment_Home"
        />

    <TextView
        android:id="@+id/fragment_home_title_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/fragment_home_list_services"
        android:layout_marginVertical="@dimen/default_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:gravity="center"
        android:textAppearance="@style/Title_List_Fragment_Home"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_title_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/small_margin"
        tools:listitem="@layout/item_service"
        android:paddingHorizontal="@dimen/small_margin"
        />


</androidx.constraintlayout.widget.ConstraintLayout>